--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="module/MOD-INF/lib/zemapi-java.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/OpenRefine"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LODRefine"/>
 	<classpathentry kind="output" path="module/MOD-INF/classes"/>
 </classpath>
